--- a/gwp/templates/index.html
+++ b/gwp/templates/index.html
@@ -1,18 +1,20 @@
-{{ define "layout" }}
+{{ define "content" }}
+<p class="lead">
+  <a href="/thread/new">Start a thread</a> or join one below!
+</p>
 
-<html lang="zh-cmn-Hans">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=9">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GWP</title>
-</head>
-
-<body>
-    {{ . }}
-</body>
-
-</html>
+{{ range . }}
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <span class="lead"> <i class="fa fa-comment-o"></i> {{ .Topic }}</span>
+    </div>
+    <div class="panel-body">
+      Started by {{ .User.Name }} - {{ .CreatedAtDate }} - {{ .NumReplies }} posts.
+      <div class="pull-right">
+        <a href="/thread/read?id={{.Uuid }}">Read more</a>
+      </div>
+    </div>
+  </div>
+{{ end }}
 
 {{ end }}
